--- a/shop.html
+++ b/shop.html
@@ -92,21 +92,21 @@
       <div class="container_button">
         <div class="btn-box">
           <ul class="brand">
-            <li class="list_item"><a class="" href="">Gucci </a></li>
-            <li class="list_item"><a class="" href="">Dior </a></li>
-            <li class="list_item"><a class="" href="">Rayban </a></li>
-            <li class="list_item"><a class="" href="">Gentle Monster </a></li>
-            <li class="list_item"><a class="" href="">Louis Vuitton </a></li>
-            <li class="list_item"><a class="" href="">Prada </a></li>
-            <li class="list_item"><a class="" href="">Lacoste </a></li>
-            <li class="list_item"><a class="" href="">Cartier </a></li>
-            <li class="list_item"><a class="" href="">Dolce & Gabbana </a></li>
-            <li class="list_item"><a class="" href="">Burberry </a></li>
+            <li class="list_item"><a class="btn_brand" href="" type="gucci">Gucci </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Dior </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Rayban </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Gentle Monster </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Louis Vuitton </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Prada </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Lacoste </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Cartier </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Dolce & Gabbana </a></li>
+            <li class="list_item"><a class="btn_brand" href="">Burberry </a></li>
           </ul>
         </div>
       </div>
       <div class="glass_container">
-        <div class="box">
+        <div id="" class="box item_box" type="gucci">
           <div class="img-box">
             <img src="images/gucci GG0116S-001.jpg" alt="">
           </div>
@@ -122,7 +122,7 @@
             </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box hide item_box" type="dior">
           <div class="img-box">
             <img src="images/g-2.png" alt="">
           </div>
@@ -322,9 +322,9 @@
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
