--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
                   <a class="nav-link" href="shop.html"> Sản phẩm </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Chất lượng </a>
+                  <a class="nav-link" href="glass.html"> Chất lượng </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html"> Liên hệ </a>
@@ -107,6 +107,35 @@
       </div>
       <div class="glass_container">
         <div id="" class="box item_box" type="gucci">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/gucci GG0116S-001.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Gucci GG0116S-001
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : GG0116S-001
+                  </h6>
+                  <h7>
+                    6.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
             <img src="images/gucci GG0116S-001.jpg" alt="">
           </div>
@@ -117,121 +146,324 @@
             <h6>
               6.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div id="" class="box hide item_box" type="dior">
+        <div id="" class="box item_box" type="gucci">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/gucci GG0116S-007.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Gucci GG0116S-007
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : GG0116S-007
+                  </h6>
+                  <h7>
+                    12.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-2.png" alt="">
+            <img src="images/gucci GG0116S-007.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Gucci GG0116S-007
             </h5>
             <h6>
-              699.000đ
+              12.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="dior">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/dior color quake 001-A.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Dior Color Quake 001-A
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : 001-A
+                  </h6>
+                  <h7>
+                    16.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-3.png" alt="">
+            <img src="images/dior color quake 001-A.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Dior Color Quake 001-A
             </h5>
             <h6>
-              799.000đ
+              16.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="rayban">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/rayban RB001.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Rayban RB001
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : RB001
+                  </h6>
+                  <h7>
+                    8.099.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-4.png" alt="">
+            <img src="images/rayban RB001.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Rayban RB001
             </h5>
             <h6>
-              1.299.000đ
+              8.099.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="dior">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/dior color quake 002-A.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Dior Color Quake 002-A
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : 002-A
+                  </h6>
+                  <h7>
+                    15.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-5.png" alt="">
+            <img src="images/dior color quake 002-A.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Dior Color Quake 002-A
             </h5>
             <h6>
-              2.399.000đ
+              15.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="gucci">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/gucci GG0279.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Gucci GG0279
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : GG0279
+                  </h6>
+                  <h7>
+                    6.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-6.png" alt="">
+            <img src="images/gucci GG0116S-001.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Gucci GG0279
             </h5>
             <h6>
-              990.000đ
+              6.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="rayban">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/rayban RB002.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Rayban RB002
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : RB002
+                  </h6>
+                  <h7>
+                    9.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-7.png" alt="">
+            <img src="images/rayban RB002.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Rayban RB002
             </h5>
             <h6>
-              1.099.000đ
+              9.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
-        <div class="box">
+        <div id="" class="box item_box" type="dior">
+          <div class="detail_item">
+            <div class="container_detail">
+              <div class="alpha">
+                <div class="img-box">
+                  <img src="images/dior pop soreal 001-A.jpg" alt="">
+                </div>
+              </div>
+              <div class="omega">
+                <div class="infor">
+                  <h5>
+                    Kính mát Dior POP Soreal 001-A
+                  </h5>
+                  <h6>
+                    Mã sản phẩm : 001-A
+                  </h6>
+                  <h7>
+                    16.599.000đ
+                  </h7>
+                  <a href="">
+                    Mua ngay
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="comment">
+              <h5>Bình luận : </h5>
+              <input type="text" name="" id="" placeholder="Để lại bình luận của bạn ở đây">
+            </div>
+          </div>
           <div class="img-box">
-            <img src="images/g-8.png" alt="">
+            <img src="images/gucci GG0116S-001.jpg" alt="">
           </div>
           <div class="price">
             <h5>
-              Kính mát ABC 
+              Kính mát Dior POP Soreal 001-A
             </h5>
             <h6>
-              999.000đ
+              16.599.000đ
             </h6>
-            <a href="">
-              Mua ngay
-            </a>
+              <a href="">
+                Mua ngay
+              </a>
           </div>
         </div>
       </div>
@@ -322,7 +554,7 @@
   </section>
   <!-- footer section -->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/jquery-3.7.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script src="js/main.js"></script>
 
