--- a/glass.html
+++ b/glass.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Sglass</title>
+  <title>3TGlasses</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
           <a class="navbar-brand mr-5" href="index.html">
             <span>
-              Sglass
+              3T Glasses
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,26 +45,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="shop.html"> Shop </a>
-                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="glass.html"> Glasses </a>
+                  <a class="nav-link" href="index.html">Trang chủ <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="about.html"> Giới thiệu </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="shop.html"> Sản phẩm </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="glass.html"> Chất lượng </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Liên hệ</a>
                 </li>
               </ul>
             </div>
             <div class="quote_btn-container ">
               <a href="">
-                Log in
+                Đăng nhập
               </a>
               <a href="">
                 <img src="images/cart.png" alt="">
@@ -82,11 +82,11 @@
 
   <!-- quality section -->
 
-  <section class="quality_section layout_padding">
+  <section id="quality_section" class="quality_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          <span> Best</span> Quality
+          <span> Chất lượng</span> tốt chất
         </h2>
       </div>
       <div class="row">
@@ -96,7 +96,7 @@
               <a class=" active" id="QTab1Link" data-toggle="tab" href="#qTab1" role="tab" aria-controls="qTab1" aria-selected="true">
                 <h6 id="QTab1Link" data-toggle="tab" href="#qTab1" role="tab" aria-controls="qTab1" aria-selected="true">
                   <span>01</span>
-                  It is a long established fact that a reader will be distracted
+                  Mỗi chiếc mắt kính được chọn lọc cẩn thận và kiểm tra kỹ lưỡng trước khi đến tay khách hàng.
                 </h6>
               </a>
             </li>
@@ -104,7 +104,7 @@
               <a class="" id="QTab2Link" data-toggle="tab" href="#qTab2" role="tab" aria-controls="qTab2" aria-selected="false">
                 <h6 id="QTab2Link" data-toggle="tab" href="#qTab2" role="tab" aria-controls="qTab2" aria-selected="false">
                   <span>02</span>
-                  by the readable content of a page when looking at its
+                  Được sản xuất bởi các chuyên gia có kinh nghiệm, chúng tôi cam kết sử dụng nguyên liệu chất lượng cao và công nghệ tiên tiến.
                 </h6>
               </a>
             </li>
@@ -112,7 +112,7 @@
               <a class="" id="QTab3Link" data-toggle="tab" href="#qTab3" role="tab" aria-controls="qTab3" aria-selected="false">
                 <h6 id="QTab3Link" data-toggle="tab" href="#qTab3" role="tab" aria-controls="qTab3" aria-selected="false">
                   <span>03</span>
-                  layout. The point of using Lorem Ipsum is that it has a
+                  Mắt kính của chúng tôi không chỉ đảm bảo sức khỏe mắt, mà còn thể hiện phong cách và cá nhân của bạn.
                 </h6>
               </a>
             </li>
@@ -120,7 +120,7 @@
               <a class="" id="QTab4Link" data-toggle="tab" href="#qTab4" role="tab" aria-controls="qTab4" aria-selected="false">
                 <h6 id="QTab4Link" data-toggle="tab" href="#qTab4" role="tab" aria-controls="qTab4" aria-selected="false">
                   <span>04</span>
-                  more-or-less normal distribution of letters,
+                  Tin tưởng vào chất lượng và sự độc đáo của mắt kính từ 3T Glasses - nơi sự tận tâm và cam kết luôn đi đầu.
                 </h6>
               </a>
             </li>
@@ -157,7 +157,7 @@
 
   <!-- offer section -->
 
-  <section class="offer_section">
+  <section id="offer_section" class="offer_section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 px-0">
@@ -165,7 +165,7 @@
             <img src="images/offer-img.jpg" alt="">
             <div class="price">
               <h4>
-                $60
+                699.000đ
               </h4>
             </div>
           </div>
@@ -173,13 +173,13 @@
         <div class="col-md-4 offset-md-1">
           <div class="detail-box">
             <h2>
-              Book <br>
-              our <br>
-              special <br>
-              offer
+              Khám phá ngay <br>
+              ưu đãi <br>
+              đặc biệt <br>
+              của chúng tôi
             </h2>
             <a href="">
-              See More offer
+              Thêm ưu đãi
             </a>
           </div>
         </div>
@@ -197,11 +197,11 @@
       <div class="heading_container">
         <h2>
           <span class="s-1">
-            Buy
+            Lựa chọn
           </span>
-          your stylish
+          phong cách
           <span class="s-2">
-            glasses
+            của bạn
           </span>
         </h2>
       </div>
@@ -211,15 +211,14 @@
         </div>
         <div class="detail-box">
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-            letters, <br>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-            letters,
+            Chọn mắt kính không chỉ là việc bảo vệ mắt, mà còn là cách thể hiện phong cách và cá tính riêng. 
+            Hãy tự tin xác định phong cách cá nhân và hình dáng khuôn mặt của bạn, sau đó chọn mắt kính phù hợp. 
+            Màu sắc, kích cỡ, và chất liệu kính đều đóng vai trò quan trọng trong việc tạo nên một diện mạo độc đáo và thú vị. 
+            Hãy thử nghiệm và tìm mắt kính mà bạn cảm thấy thoải mái và tự tin nhất. 
+            Đó chính là cách bạn biểu đạt sự cá tính và phong cách riêng của mình.
           </p>
           <a href="">
-            Book Now
+            Yêu cầu tư vấn ngay
           </a>
         </div>
       </div>
@@ -235,59 +234,59 @@
       <div class="row">
         <div class="col-md-5">
           <h6>
-            Subscribe Now
+            Đăng ký ngay
           </h6>
           <form action="">
-            <input type="text" placeholder="Enter your email">
+            <input type="text" placeholder="Nhập email của bạn">
             <div class="d-flex justify-content-end">
               <button>
-                submit
+                Gửi
               </button>
             </div>
           </form>
         </div>
         <div class="col-md-3 offset-md-1">
           <h6>
-            Links
+            Liên hệ
           </h6>
           <ul>
             <li>
               <a href="">
-                Lorem ipsum dolor sit
+                Facebook
               </a>
             </li>
             <li>
               <a href="">
-                amet, consectetur adipis
+                Instagram
               </a>
             </li>
             <li>
               <a href="">
-                cing elit, sed do
+                Email
               </a>
             </li>
           </ul>
         </div>
         <div class="col-md-3">
           <h6>
-            Contact us
+            Địa chỉ
           </h6>
           <ul>
             <li>
               <a href="">
-                Lorem ipsum dolor sit
+                Khu Phố 6, Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam
+              </a>
+            </li>
+            <!-- <li>
+              <a href="">
+                Khu Phố 6, Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam
               </a>
             </li>
             <li>
               <a href="">
-                amet, consectetur adipis
+                Khu Phố 6, Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam
               </a>
-            </li>
-            <li>
-              <a href="">
-                cing elit, sed do
-              </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -296,18 +295,17 @@
 
   <!-- end info section -->
 
+
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Thiết ké bởi : Nhóm 21 - Môn : Lập trình Web 
     </p>
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-3.7.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 
