--- a/about.html
+++ b/about.html
@@ -63,10 +63,10 @@
               </ul>
             </div>
             <div class="quote_btn-container ">
-              <a href="">
+              <a href="form login/login.html">
                 Đăng nhập
               </a>
-              <a href="">
+              <a href="cart.html">
                 <img src="images/cart.png" alt="">
               </a>
               <form class="form-inline">
