--- a/form login/login.html
+++ b/form login/login.html
@@ -26,6 +26,11 @@
                 </div>
             </div>
             <input type="submit" value="Đăng nhập" class="form-submit">
+            <div class="link">
+                <a href="/3T Glasses/form signin/signin.html" class="signin">Đăng ký</a>
+                <a href="/3T Glasses/forgot password/forgotpassw.html" class="forgot_pass">Quên mật khẩu ?</a>
+            </div>
+
         </form>
     </div>
     
